<resources>
    <string name="app_name">ofrim-SubBook</string>
    <string name="new_subscription">New Subscription</string>
    <string name="subscription_title">Subscription Title (up to 20 characters)</string>
    <string name="subscription_title_hint">Title</string>
    <string name="subscription_date">Payment Date (yyyy-mm-dd)</string>
    <string name="subscription_date_hint">Date</string>
    <string name="subscription_amount">Subscription Amount</string>
    <string name="subscription_amount_hint">Amount</string>
    <string name="subscription_comment">Comment (up to 30 characters)</string>
    <string name="subscription_comment_hint">Comment</string>
    <string name="save_button">Save</string>
    <string name="delete_button">Delete</string>
    <string name="total">Total</string>
</resources>
