<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context="com.ofrim.ofrim_subbook.SubscriptionDetailActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="551dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/subscription_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subscription_title" />

        <EditText
            android:id="@+id/title_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/subscription_title_hint"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/subscription_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subscription_amount" />

        <EditText
            android:id="@+id/amount_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/subscription_amount_hint"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/subscription_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subscription_date" />

        <EditText
            android:id="@+id/date_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/subscription_date_hint"
            android:inputType="date" />

        <TextView
            android:id="@+id/subscription_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subscription_comment" />

        <EditText
            android:id="@+id/comment_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/subscription_comment_hint"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_button" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_button" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
